# agentic-rag-system

./: .env.example  .gitignore  ingest.py  main.py  pyproject.toml  requirements.txt
db/schemas/: file_registry.sql  image_registry.sql
frontend/: index.html
src/common/: __init__.py  exceptions.py  hashing.py  logging.py
src/config/: constants.py  settings.py
src/db/: pinecone_client.py
src/db_clients/: pinecone_client.py  supabase_client.py
src/llm_adapters/embeddings/: __init__.py  base.py
src/llm_adapters/llm/: base.py
src/pipeline/extract/: fetch_table.py
src/pipeline/load/: pinecone_loader.py  sync.py
src/pipeline/transform/: chunker.py  embedder.py
src/rag/: chunker.py  fetch_table.py  ingestor.py  parser.py  sync.py
src/utilities/: draw_bbox.py  fetch_table.py
